fix reconnection