@@ -2,19 +2,17 @@ package dev.mouradski.ftso.prices.client.ace;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import dev.mouradski.ftso.prices.client.AbstractClientEndpoint;
-import dev.mouradski.ftso.prices.client.nonkyc.TickerData;
 import dev.mouradski.ftso.prices.model.Source;
 import dev.mouradski.ftso.prices.model.Ticker;
 import dev.mouradski.ftso.prices.utils.SymbolHelper;
 import io.quarkus.scheduler.Scheduled;
-import io.smallrye.mutiny.Multi;
 import io.smallrye.mutiny.Uni;
 import jakarta.enterprise.context.ApplicationScoped;
 
 import java.net.URI;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 @ApplicationScoped
@@ -36,9 +34,9 @@ public class AceTickerUpdater extends AbstractClientEndpoint {
             return;
         }
 
-        this.lastTickerTime = System.currentTimeMillis();
+        this.messageReceived();
 
-        Arrays.asList("https://ace.io/polarisex/oapi/v2/list/tradePrice").forEach(url -> {
+        List.of("https://ace.io/polarisex/oapi/v2/list/tradePrice").forEach(url -> {
             var request = HttpRequest.newBuilder()
                     .uri(URI.create(url))
                     .header("Content-Type", "application/json")
